[package]
name = "loudgain-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
rodio = { version = "0.15.0", features = ["symphonia-all"] }
ebur128 = "0.1.6"
lazy_static = "1.4.0"
walkdir = "2.3.2"
tempfile = "3"
subprocess = "0.2.8"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "test"
harness = false
